--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-dancing-script: var(--font-dancing-script);
+  --font-great-vibes: var(--font-great-vibes);
+  --font-parisienne: var(--font-parisienne);
 }
 
 :root {
